--- a/crud/src/App.css
+++ b/crud/src/App.css
@@ -26,6 +26,10 @@
   color: rgb(112, 76, 182);
 }
 
+.lineGrid > td {
+  margin: 0;
+}
+
 @keyframes App-logo-float {
   0% {
     transform: translateY(0);
